k8s_t1/deploy-svc-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-check-app
  template:
    metadata:
      labels:
        app: health-check-app
    spec:
      containers:
      - name: hello-java
        image: robolitan1/otus_docker_task:v2
        ports:
          - containerPort: 8000
        livenessProbe:
          httpGet:
             path: /health
             port: 8000
          initialDelaySeconds: 60
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 65
          periodSeconds: 20
          timeoutSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health-check-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
