k8s_t1/ingress-app-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /otusapp(/|$)(.*)
            backend:
              service:
                name: health-service
                port:
                  number: 80
          - pathType: Prefix
            path: /health(/|$)
            backend:
              service:
                name: health-service
                port:
                  number: 80
